# ApexDEXAPI

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
examples/: CMakeLists.txt
examples/InvokingPrivateAPI/: main.cpp
examples/InvokingPublicAPI/: main.cpp
include/: ApexAPI.h  ApexAPICredentials.h  ApexAccountBalance.h  ApexCandle.h  ApexCandleList.h  ApexPriceHistory.h  ApexPrivateAPI.h  ApexPublicAPI.h  ApexRequest.h  ApexSymbols.h  ApexTicker.h  Cache.h  Candle.h  CurrencyPair.h  Pollable.h  Request.h  SafeQueue.h  Scheduler.h  Util.h
include/Interfaces/: IDataProcessor.h  IDataProvider.h
src/: ApexAPI.cpp  ApexAPICredentials.cpp  ApexAccountBalance.cpp  ApexCandle.cpp  ApexCandleList.cpp  ApexPriceHistory.cpp  ApexPrivateAPI.cpp  ApexPublicAPI.cpp  ApexRequest.cpp  ApexSymbols.cpp  ApexTicker.cpp  CMakeLists.txt  Candle.cpp  CurrencyPair.cpp  Pollable.cpp  Request.cpp  Scheduler.cpp  Util.cpp
tests/: CMakeLists.txt  PlayAround.cpp
tests/CandleListTest/: test.cpp
tests/CandleTest/: test.cpp
tests/ServerTimeEstimationTest/: test.cpp
tests/TestRequest/: main.cpp
